<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.valleyforge.android.ffbechaincalculator.EditAbilityActivity">

    <FrameLayout
        android:id="@+id/grp_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/tv_edit_ability_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="[[Edit Unit Ability Text]]"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/grp_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grp_header"
        android:layout_above="@+id/grp_button_bar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- The Ability Name Input Group -->
                <LinearLayout
                    android:id="@+id/grp_ability_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ea_et_ability_name_label"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/et_ability_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ea_et_ability_name_hint"
                        android:inputType="text"/>

                </LinearLayout>

                <!-- The Ability Type Input Group -->
                <LinearLayout
                    android:id="@+id/grp_ability_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ea_dd_ability_type_label"
                        android:textStyle="bold"/>

                    <!--
                        I'm not entirely satisfied with how this dropdown is lining up.
                        I added this Linear Layout here to give some context to what the user is selecting,
                        there is a label above it, but something doesn't feel quite right about it...
                        I dunno, just getting this in here for now, we can fix it later...
                    -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/ea_dd_ability_type_label"
                            android:textSize="22sp"
                            android:gravity="center_vertical"/>

                        <Spinner
                            android:id="@+id/ea_sp_ability_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:drawable/btn_dropdown"/>
                    </LinearLayout>

                </LinearLayout>

                <!-- The Damage Modifier Input Group -->
                <LinearLayout
                    android:id="@+id/grp_damage_modifier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ea_et_damage_modifier_label"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/et_damage_modifier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ea_et_damage_modifier_hint"
                        android:inputType="number"/>

                </LinearLayout>

                <!-- The Ignore Defense Input Group -->
                <LinearLayout
                    android:id="@+id/grp_ignore_defense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ea_et_ignore_defense_label"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/et_ignore_defense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ea_et_ignore_defense_hint"
                        android:inputType="number"/>

                </LinearLayout>

                <!-- The Ignore Spirit Input Group -->
                <LinearLayout
                    android:id="@+id/grp_ignore_spirit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ea_et_ignore_spirit_label"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/et_ignore_spirit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ea_et_ignore_spirit_hint"
                        android:inputType="number"/>

                </LinearLayout>

                <!-- The Number of Hits Input Group -->
                <LinearLayout
                    android:id="@+id/grp_number_hits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ea_et_number_hits_label"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/et_number_hits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ea_et_number_hits_hint"
                        android:inputType="number"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/grp_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/ButtonBar"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/bn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bn_cancel_text"
            android:onClick="onCancelActionClick"
            android:layout_toLeftOf="@+id/bn_save"
            android:layout_toStartOf="@+id/bn_save"/>

        <Button
            android:id="@+id/bn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bn_save_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="onSaveUnitClick"/>

    </RelativeLayout>

</RelativeLayout>
